--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <div id="inventory">
             <h3>Inventory</h3>
             <div id="inventory-items"></div>
+            <p style="margin-top: 10px; font-size: 0.85em; color: #aaa;">Press 1-9 to use consumables (green items)</p>
         </div>
 
         <!-- Crafting Menu -->
@@ -58,7 +59,7 @@
         <!-- Controls Help -->
         <div id="controls-help">
             <h4>Controls:</h4>
-            <p>WASD - Move | Mouse - Look | E - Interact | C - Craft | Space - Jump</p>
+            <p>WASD - Move | Mouse - Look | E - Interact | C - Craft | Space - Jump | 1-9 - Use Items</p>
         </div>
     </div>
 
