--- a/index.html
+++ b/index.html
@@ -53,13 +53,21 @@
             <button id="close-crafting">Close</button>
         </div>
 
+        <!-- Build Menu -->
+        <div id="build-menu" style="display: none;">
+            <h3>Building (Requires Building Plan)</h3>
+            <div id="building-options"></div>
+            <button id="close-build">Close</button>
+        </div>
+
         <!-- Messages -->
         <div id="message-display"></div>
 
         <!-- Controls Help -->
         <div id="controls-help">
             <h4>Controls:</h4>
-            <p>WASD - Move | Mouse - Look | E - Interact | C - Craft | Space - Jump | 1-9 - Use Items</p>
+            <p>WASD - Move | Mouse - Look | E - Interact | C - Craft | B - Build | Space - Jump | 1-9 - Use Items</p>
+            <p style="font-size: 0.8em; margin-top: 5px;">Build Mode: Click to place | Q - Rotate | B - Cancel</p>
         </div>
     </div>
 
