--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         <div id="controls-help">
             <h4>Controls:</h4>
             <p>WASD - Move | Mouse - Look | E - Interact | C - Craft | B - Build | Space - Jump | 1-9 - Use Items</p>
-            <p style="font-size: 0.8em; margin-top: 5px;">Build Mode: Click to place | Q - Rotate | B - Cancel</p>
+            <p style="font-size: 0.8em; margin-top: 5px;">Menus: ↑↓ arrows to select | Enter to craft/build</p>
+            <p style="font-size: 0.8em; margin-top: 3px;">Build Mode: Click to place | Q - Rotate | B - Cancel</p>
         </div>
     </div>
 
