--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <div id="inventory">
             <h3>Inventory</h3>
             <div id="inventory-items"></div>
-            <p style="margin-top: 10px; font-size: 0.85em; color: #aaa;">Press 1-9 to use consumables (green items)</p>
+            <p style="margin-top: 10px; font-size: 0.85em; color: #aaa;">
+                Green = consumables (press 1-9) | Orange = equipment (click to equip)
+            </p>
         </div>
 
         <!-- Crafting Menu -->
